Use github actions

--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -41,6 +41,8 @@ jobs:
           node-version: 20.11.0
           cache: "yarn"
       - run: yarn
+      - name: Install dependencies for Puppeteer
+        run: sudo apt-get update && sudo apt-get install -y libnss3 libxss1 libasound2
       - run: yarn test
 
   build:
