Use github actions

--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -43,7 +43,18 @@ jobs:
       - run: yarn
       - name: Install dependencies for Puppeteer
         run: sudo apt-get update && sudo apt-get install -y libnss3 libxss1 libasound2t64
-      - run: yarn test
+
+      - name: Start server in background
+        run: yarn start & # Запускаем сервер в фоне
+
+      - name: Wait for server to be ready
+        run: sleep 10 # Даём серверу время на запуск
+
+      - name: Run tests
+        run: yarn test
+
+      - name: Stop server
+        run: kill $(lsof -t -i:9000) || true # Завершаем сервер
 
   build:
     needs: [eslint, test]
